# deep-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  ui.py
src/: generation.py  ingestion.py  models.py  retrieval.py
