[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "nicegui>=3.8.0",
    "openai>=2.24.0",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.5",
    "pypdfium2>=5.5.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client==1.7.0",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
